save largest face too, filter out any faces below N px

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Extract all faces found in an image into a new image",
   "main": "face-api.js",
   "scripts": {
-    "start": "tsc && node src/pipeline.js"
+    "start": "tsc && ts-node src/pipeline.ts"
   },
   "author": "Boris Yakubchik",
   "license": "MIT",
@@ -12,5 +12,10 @@
     "@tensorflow/tfjs-node": "1.4.0",
     "face-api.js": "0.22.0",
     "sharp": "0.24.0"
+  },
+  "devDependencies": {
+    "pretty-error": "^2.1.1",
+    "source-map-support": "^0.5.16",
+    "ts-node": "^8.6.2"
   }
 }
